--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,8 +1,27 @@
-<h1>Song List</h1>
-  <ul>
+<h1>Songs</h1>
+
+<table>
+  <head>
+    <tr>
+      <th>Title</th>
+      <th>Year</th>
+      <th>Genre</th>
+      <th>Artist Name</th>
+      <th>Links</th>
+    </tr>
+  </head>
+
+  <tbody>
     <% @songs.each do |song| %>
-      <li><%= song.title %></li>
+      <tr>
+        <td><%= song.title %></td>
+        <td><%= song.title %></td>
+        <td><%= song.title %></td>
+        <td><%= song.title %></td>
+        <td></td>
+      </tr>
     <% end %>
-  </ul>
+  </tbody>
+</table>
 
     
