--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -18,7 +18,11 @@
         <td><%= song.artist_name %></td>
         <td><%= song.release_year %></td>
         <td><%= song.genre %></td>
-        <td></td>
+        <td>
+          <%= link_to 'View', song_path(song) %> |
+          <%= link_to 'Edit', edit_song_path(song) %> |
+          <%= link_to 'Delete', song, method: :delete, :data: { confirm: 'For real?' } %> 
+        </td>
       </tr>
     <% end %>
   </tbody>
